@@ -68,7 +68,7 @@ public class WebdavRootResourceImpl implements Resource, PropFindableResource, C
 
 	public Long getContentLength() {
 		// TODO Auto-generated method stub
-		return new Long(0);
+		return Long.valueOf(0);
 	}
 
 	public String getContentType(String accepts) {
@@ -118,7 +118,7 @@ public class WebdavRootResourceImpl implements Resource, PropFindableResource, C
 	public List<? extends Resource> getChildren() {
 	    User user=(User)HttpManager.request().getAuthorization().getTag();
 		List<Host> hosts = listHosts();
-		List<Resource> hrs = new ArrayList<Resource>();
+		List<Resource> hrs = new ArrayList<>();
 		for (Host host : hosts) {
 		    String sep="/";
             if(path.endsWith(sep)) sep="";
@@ -159,7 +159,7 @@ public class WebdavRootResourceImpl implements Resource, PropFindableResource, C
 	}
 
 	public Long getMaxAgeSeconds() {
-		return new Long(60);
+		return Long.valueOf(60);
 	}
 
 	public LockToken getCurrentLock() {
