@@ -63,7 +63,7 @@ public class UserUtil {
 
 		if (Validator.isNotNull(LISTENER)) {
 			try {
-				listener = (ModelListener)Class.forName(LISTENER).newInstance();
+				listener = (ModelListener)Class.forName(LISTENER).getDeclaredConstructor().newInstance();
 			}
 			catch (Exception e) {
 				Logger.error(UserUtil.class,e.getMessage(),e);
@@ -92,7 +92,7 @@ public class UserUtil {
 
 		if (Validator.isNotNull(LISTENER)) {
 			try {
-				listener = (ModelListener)Class.forName(LISTENER).newInstance();
+				listener = (ModelListener)Class.forName(LISTENER).getDeclaredConstructor().newInstance();
 			}
 			catch (Exception e) {
 				Logger.error(UserUtil.class,e.getMessage(),e);
